# luupycards

./: .gitignore  LICENSE  README.md  example.csv  install.sh  luupycards  pyproject.toml  requirements.txt  template.desktop
examples/: hiragana.csv  katakana.csv  ward12.json  ward13.json
examples/meaning/: ward11.csv  ward12.json  ward13.json  ward14.json  ward15.csv
examples/pronunciation/: ward11.csv  ward12.json  ward13.json  ward14.json  ward15.csv
examples/sentences/: ward11.json  ward12.json  ward13.json  ward14.json  ward15.csv
v0/: core_functions.py  gameplay_modules.py  main.py  main_menu.py  memory.json  neverrepeat.py  pair_import.py  settings.json
v0-discarded/: core_functions.py  experiment_file.py  gameplay_modules.py  main.py  normal.py
v1/: core_functions.py  gameplay_modules.py  installation.md  main.py  main.spec  settings.json
v2/: core_functions.py  documentation.py  gameplay_modules.py  import.ui  import_dialog.py  info.py  licence.py  main.py  main.ui  main<3.py  main_pyside.py  maintest.py  seek.py  seek.ui  settings.json  ui.py
v2/ui-files/: documentation.ui  import.ui  info.ui  licence.ui  main.ui  seek.ui
