[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Luupycards"
version = "2.0.0"
authors = [
  { name="Luuppi", email="se.topsu@gmail.com" },
]
description = "A flip card game"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/LuuppiChan/luupycards"
Issues = "https://github.com/LuuppiChan/luupycards/issues"
